--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,15 @@
 } */
 .nav{
   width: 100%;
-  height: 50px;
+  height: 100px;
   display: flex;
   justify-content: space-around;
   background-color: black;
   color: white;
   align-items: center;
-  padding: 20px;
+ 
   position: relative;
 }
-
 .logo{
   width: 10%;
   display: flex;
@@ -87,14 +86,15 @@ span{
   margin-top: 100px;
 }
 .cardimg{
-  width: 10%;
+  width: 70px;
+  height: 70px;
 }
 .first,.second,.third{
   overflow: hidden;
   border-radius: 40px;
   padding: 20px;
   font-size: 30px;
-  font-weight: 300;
+  font-weight: 400;
 }
 .first{
   transform: rotate(-10deg);
@@ -227,7 +227,7 @@ button{
 .insidetopone{
   width: 25%;
   border: 1px solid #FDE3AF;
-  padding: 10px;
+  padding: 30px 20px 30px 20px;
   border-radius: 20px;
   background-color: #FEF8EC;
 }
@@ -235,7 +235,7 @@ button{
   width: 67%;
   display: flex;
   border: 1px solid #FDE3AF;
-  padding: 10px;
+  padding: 30px 10px 30px 10px;
   border-radius: 20px;
 }
 .insidetoptwo>div{
@@ -254,7 +254,7 @@ button{
 .insidebottom>div{
   width: 47%;
   border: 1px solid #FDE3AF;
-  padding: 10px;
+  padding: 30px 10px 30px 10px;
   border-radius: 20px;
 }
 ul {
