--- a/src/App.css
+++ b/src/App.css
@@ -331,7 +331,7 @@ hr{
 .insidecontact>div>p{
   margin-top: 50px;
 }
-input{
+.mail{
   padding: 15px;
   width: 40%;
   border-radius: 10px;
@@ -357,6 +357,119 @@ input{
 }
 .textblue{
   color: #7C59CF;
+}
+.investing{
+  width: 100%;
+  background-color: black;
+  color: white;
+  border: 1px solid black;
+  text-align: center;
+}
+.reference{
+  position: relative;
+  font-size: 30px;
+  font-weight: 350;
+}
+.semicircle{
+  width: 50%;
+  margin: auto;
+  z-index: 1;
+}
+.semicircle>div{
+  border-radius: 50% 50% 0 0 ;
+  border: 2px solid blue;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  position: absolute;
+}
+.ten{
+  width: 700px;
+  height: 650px;
+  top: 50%;
+  left: 28%;
+}
+.nine{
+  width: 600px;
+  height: 550px;
+  top: 55%;
+  left: 31%;
+}
+.eight{
+  width: 500px;
+  height: 450px;
+  top: 60%;
+  left: 34%;
+}
+
+.mobile{
+  display: flex;
+  width: 70%;
+  margin: auto;
+  justify-content: space-evenly;
+  z-index: 3;
+  position: relative;
+  padding-bottom: 70px;
+}
+.mobile>div:nth-child(1){
+  width: 20%;
+  border: 1px solid black;
+}
+.mobile>div:nth-child(2){
+  width: 40%;
+  border: 1px solid black;
+}
+.mobile>div:nth-child(2)>img{
+  width: 100%;
+  height: 600px;
+}
+.mobile>div:nth-child(3){
+  width: 20%;
+  border: 1px solid black;
+}
+.simplified{
+  width: 90%;
+  margin: auto;
+  margin-top: 100px;
+}
+.simplified>h1{
+  margin-left: 100px;
+}
+.simplified>p{
+  margin-left: 100px;
+  font-size: 23px;
+  width: 35%;
+  color: gray;
+}
+.small{
+  margin-top: -20px;
+}
+.infocards{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 50px;
+}
+.infocards>div{
+  width: 22%;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  padding: 20px 10px 20px 10px;
+}
+.innerinfo{
+  display: flex;
+  justify-content: space-evenly;
+}
+.innerinfo>img{
+  width: 30%;
+}
+.innerinfo+div{
+  width: 70%;
+  margin: auto;
+}
+.innerinfo+div+div{
+  display: flex;
+  justify-content: space-evenly;
 }
 
 
